fixed footer to align center

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,11 @@
 
 }
 
+header, .grid, footer{
+  max-width: 960px;
+  margin: 0 auto;
+}
+
 body {
   font-family: var(--body-font);
   color: var(--text-color);
@@ -26,17 +31,24 @@ body {
 nav {
   background-color: var(--nav-bg-color);
   padding: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;  
 }
 
 nav a {
   color: var(--nav-text-color);
   display: block;
   padding: 20px;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 700;
 }
 
 h1 {
   color: darkblue;
   padding-left: 1rem;
+  border-bottom: 1px solid #000;
 }
 
 main img {
@@ -55,46 +67,65 @@ p {
 }
 
 main {
-  max-width: 800px;
+  max-width: 100%;
+  grid-column: 2 / 3;
+  margin: 0;
 }
 
 aside {
-  width: 20em;
-  text-align: center;
+  position: relative;
+  grid-column: 1 / 2;
+  grid-row: 1;
 }
 
 aside img {
-  width: 200px;
+  width: 100%;
   height: auto;
 }
 aside h2 {
   position: absolute;
-  top: 660px;
-  left: 155px;
+  top: 40px;
+  left: 50px;
 }
 
 p {
-   padding: 0;
-  margin: 0 0 0 1rem;
+  text-align: left;
+  padding: 0;
+  margin: 0 0  1rem 0;
 }
 
-footer{
-  margin-top: 1rem;
+footer {
+  max-width: 960px;
   border-top: 1px solid #000;
   text-align: center;
+  padding: 1rem 0;
+  background: transparent;
 }
+.footer p {
+  text-align: center;
 
+}
 
 /* Class Selectors */
 
 .box {
-    margin: 1rem;
+    margin: 1rem 0;
     border: 1px solid rgb(0 0 0 / 100%);
     padding: 2rem;
-    background-color: rgb(220, 220, 220);
+    background-color: rgb(239, 248, 254);
     color: var(--text-color);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
-    width: 45%;
-    max-width: 500px;
+    max-width: 38rem;
 }    
+
+.grid {
+  display: grid;
+  grid-template-columns: 400px 1fr;
+  gap: 2rem;
+  justify-content: center;
+  padding: 1rem;
+  max-width: 960px;
+  margin: 0 auto;
+}
+
